<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">KeyakiFeed</string>

    <!-- settings -->
    <string name="setting_category_title_notification">通知設定</string>
    <string name="setting_title_notification">ブログ更新通知</string>
    <string name="setting_summary_notification">ブログ更新通知を受け取るかどうか設定できます</string>

    <string name="setting_title_notification_restriction">ブログ更新通知制限</string>
    <string name="setting_summary_notification_restriction">推しメン登録したメンバーのみブログ更新通知を受け取るかどうか設定できます</string>

    <!-- notification -->
    <string name="notify_start_download_ticker">ダウンロードを開始します</string>
    <string name="notify_start_download_title">ダウンロード中</string>
    <string name="notify_start_download_text">ダウンロード中</string>

    <string name="notify_finish_download_ticker">ダウンロードが完了しました</string>
    <string name="notify_finish_download_title">ダウンロードが完了しました</string>
    <string name="notify_finish_download_text">ダウンロードが完了しました</string>

    <string name="dialog_confirm_download_title">画像をダウンロード</string>
    <string name="dialog_confirm_download_message">ダウンロードしますか？</string>
    <string name="dialog_confirm_download_positive_btn">はい</string>
    <string name="dialog_confirm_download_negative_btn">いいえ</string>

    <string name="toast_failed_download">ダウンロードできませんでした</string>

    <string name="property_name_birthday">誕生日 : %1$s</string>
    <string name="property_name_birthplace">出身地 : %1$s</string>
    <string name="property_name_blood_type">血液型 : %1$s</string>
    <string name="property_name_constellation">星座 : %1$s</string>
    <string name="property_name_height">身長 : %1$s</string>

</resources>
