<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/setting_category_title_notification">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_key_blog_updated_notification_enable"
            android:summary="@string/setting_summary_notification"
            android:title="@string/setting_title_notification" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_key_blog_updated_notification_restriction_enable"
            android:summary="@string/setting_summary_notification_restriction"
            android:title="@string/setting_title_notification_restriction" />
    </PreferenceCategory>
    <PreferenceCategory android:title="未読記事マーク">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_key_mark_unread_articles"
            android:summary="「すべてのブログ」画面の未読のブログ記事をマークします"
            android:title="未読記事のマーク" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_key_mark_unread_articles_only_favorite"
            android:summary="「推しメンのブログ」画面の未読のブログ記事をマークします"
            android:title="推しメンの未読記事のマーク" />
    </PreferenceCategory>
</PreferenceScreen>
